objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Auditor_Contact_Status__c</fullName>
        <inlineHelpText>Auditor Contact status as evaluated by Root Store Managers</inlineHelpText>
        <label>Auditor Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Auditor Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Auditor__c</field>
                <operation>equals</operation>
                <valueField>Auditor_Location__c.Auditor__c</valueField>
            </filterItems>
            <infoMessage>Not a valid value for selected Auditor Location</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Auditor_Location__c</referenceTo>
        <relationshipLabel>Auditor Contacts for Auditor Location</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Auditor</label>
        <referenceTo>Auditor__c</referenceTo>
        <relationshipLabel>Auditor Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bugzilla_Username__c</fullName>
        <label>Bugzilla Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_1__c</fullName>
        <formula>Account.CA_Email_Alias_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Email Alias 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Email_Alias_2__c</fullName>
        <formula>Account.CA_Email_Alias_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Email Alias 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner_Status__c</fullName>
        <formula>Account.Status_In_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Public comments</inlineHelpText>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_User_Profile__c</fullName>
        <description>If the contact has customer portal login a trigger on &apos;User&apos; object updates profile info.</description>
        <inlineHelpText>If the contact has customer portal login a trigger on &apos;User&apos; object updates profile info.</inlineHelpText>
        <label>Community User Profile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Primary_POCs__c</fullName>
        <formula>IF (Type_In_Text__c = &apos;Primary POC&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Primary POCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Bugzilla_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if there is a Bugzilla Account for this Contact</inlineHelpText>
        <label>Has Bugzilla Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Community_User_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the contact has customer portal login a trigger on &apos;User&apos; object update the status info.</description>
        <inlineHelpText>If the contact has customer portal login, is the user active?</inlineHelpText>
        <label>Is Community User Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Community_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the contact has customer portal login a trigger on &apos;User&apos; object checks this field.</description>
        <inlineHelpText>Does this contact have customer portal login?</inlineHelpText>
        <label>Is Community User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Case_No__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Case No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_Time__c</fullName>
        <inlineHelpText>Updated by Sync process</inlineHelpText>
        <label>Last Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Match_Running_User_s_Owner__c</fullName>
        <formula>IF (AND (BEGINS (Account.CA_Owner__c, &apos;Symantec&apos;), BEGINS (Account.CA_Owner_for_Running_User__c, &apos;Symantec&apos;)), TRUE,
   IF (Account.CA_Owner__c = Account.CA_Owner_for_Running_User__c, TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Running User&apos;s Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Email__c</fullName>
        <formula>IF (AND(Type_In_Text__c = &apos;Primary POC&apos;,ISBLANK(Email)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Primary_POC__c</fullName>
        <formula>IF (Type_In_Text__c  = &apos;Primary POC&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Primary POC?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Ext__c</fullName>
        <label>Other Phone Ext.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_In_Text__c</fullName>
        <description>A workflow updates this field from Contact.Type picklist in text form</description>
        <label>Type (In Text)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>A CA may have more than one person filling the role of Primary Point of Contact (POC), and may use a contractor as one of the POCs.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAuditorContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Auditor__c</columns>
        <columns>Auditor_Location__c</columns>
        <columns>Auditor_Contact_Status__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Auditor_Contact</value>
        </filters>
        <label>All Auditor Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllCAContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE5</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CA_Contact</value>
        </filters>
        <label>All CA Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE5</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyCAContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE5</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.CA_Contact</value>
        </filters>
        <filters>
            <field>Match_Running_User_s_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My CA Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Auditor_Contact</fullName>
        <active>true</active>
        <description>Create new Auditor Contact</description>
        <label>Auditor Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_Contact</fullName>
        <active>true</active>
        <description>Create CA Contact</description>
        <label>CA Contact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckIfHasBugzillaAcountIsChecked</fullName>
        <active>true</active>
        <description>&apos;Has Bugzilla Account?&apos; must be checked when Bugzilla Username is not blank</description>
        <errorConditionFormula>AND (Has_Bugzilla_Account__c = False, NOT(ISBLANK(Bugzilla_Username__c)))</errorConditionFormula>
        <errorDisplayField>Has_Bugzilla_Account__c</errorDisplayField>
        <errorMessage>&apos;Has Bugzilla Account?&apos; must be checked when Bugzilla Username has data</errorMessage>
    </validationRules>
</CustomObject>